@@ -1489,6 +1489,29 @@
   </build>
   <profiles>
     <profile>
+      <id>java18</id>
+      <activation>
+        <jdk>18</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--illegal-access=warn --add-exports	java.base/sun.nio.ch=ALL-UNNAMED
+        			--add-exports java.base/jdk.internal.ref=ALL-UNNAMED
+        			--add-opens java.base/java.lang=ALL-UNNAMED,org.drools.core,spring.core,javassist
+        			--add-opens java.base/java.lang.reflect=ALL-UNNAMED,spring.core,javassist
+					--add-opens java.base/java.util=ALL-UNNAMED,com.hack23.cia.web,spring.core,javassist
+					--add-opens com.hack23.cia.service.impl/com.hack23.cia.service.impl.rules=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <jdk.src.version>17</jdk.src.version>
+        <jdk.target.version>17</jdk.target.version>
+        <!-- No Java 17 support yet for forbiddenapis.skip -->
+        <forbiddenapis.skip>true</forbiddenapis.skip>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.7</jacoco.version>
+        <compiler.plugin.version>3.9.0-SNAPSHOT</compiler.plugin.version>
+        <cia.project.versions.compiler.plexus.java>1.0.7</cia.project.versions.compiler.plexus.java>
+        <surefire.version>3.0.0-M5</surefire.version>
+      </properties>
+    </profile>
+    <profile>
       <id>java17</id>
       <activation>
         <jdk>17</jdk>
